src/main/java/com/example/springhub/error/NoSuchUserException.java
package com.example.springhub.error;

public class NoSuchUserException extends Exception{

    public NoSuchUserException(String message){
        super(message);
    }
}
